sw/source/ui/docvw/PostItMgr.cxx
@@ -1624,7 +1624,9 @@ void SwPostItMgr::SetActiveSidebarWin( SwSidebarWin* p)
         if (mpActivePostIt)
         {
             mpActivePostIt->GotoPos();
+            mpView->SetAnnotationMode(true);
             mpView->AttrChangedNotify(0);
+            mpView->SetAnnotationMode(false);
             mpActivePostIt->ActivatePostIt();
         }
     }
